--- a/src/components/components-style.scss
+++ b/src/components/components-style.scss
@@ -1,9 +1,9 @@
-@import url(../components/Button/BaseButton/Button.scss);
-@import url(../components/Input/BaseInput/Input.scss);
-@import url(../components/Input/InputFormProfile/Input.scss);
-@import url(../components/Link/BaseLink/Link.scss);
-@import url(../components/Link/ActionLinkProfile/Link/ActionLink/Link.scss);
-@import url(../components/Link/ActionLinkProfile/Link/ActionButton/Button.scss);
-@import url(../components/TextBlock/ErrorPage/Title/Title.scss);
-@import url(../components/TextBlock/Profile/Title/TitleNickName.scss);
-@import url(../components/TextBlock/ErrorPage/Description/Description.scss);
+@import "../components/Link/BaseLink/Link.scss";
+@import "../components/Button/BaseButton/Button.scss";
+@import "../components/Input/BaseInput/Input.scss";
+@import "../components/Input/InputFormProfile/Input.scss";
+@import "../components/Link/ActionLinkProfile/Link/ActionLink/Link.scss";
+@import "../components/Link/ActionLinkProfile/Link/ActionButton/Button.scss";
+@import "../components/TextBlock/ErrorPage/Title/Title.scss";
+@import "../components/TextBlock/Profile/Title/TitleNickName.scss";
+@import "../components/TextBlock/ErrorPage/Description/Description.scss";
