--- a/src/components/Input/BaseInput/Input.scss
+++ b/src/components/Input/BaseInput/Input.scss
@@ -1,10 +1,6 @@
+@import '../../../assets/variables';
 
 .base-input {
-  box-sizing: border-box;
-  font-family: Inter, serif;
-  font-size: 13px;
-  font-weight: 500;
-  line-height: 13px;
   letter-spacing: 0;
   text-align: left;
   border-radius: 0;
@@ -13,25 +9,21 @@
   width: 100%;
   height: 20px;
   border: none;
-  border-bottom: 1px solid #3369f3;
-  background-color: white;
+  border-bottom: 1px solid $link-color;
+  background-color: $text-bgcolor;
   padding: 0;
-  color: #1e1e1e;
-  transition:
-    background-color 70ms cubic-bezier(0.2, 0, 0.38, 0.9),
-    outline 70ms cubic-bezier(0.2, 0, 0.38, 0.9);
+  color: $messenger-message-color;
+  transition: background-color 70ms cubic-bezier(0.2, 0, 0.38, 0.9),
+  outline 70ms cubic-bezier(0.2, 0, 0.38, 0.9);
+
   :focus {
-    outline: 2px solid #0f62fe;
+    outline: 2px solid $input-focus;
     outline-offset: -2px;
   }
 }
 
-.base-input-label{
-  font-family: Inter, serif;
-  font-size: 13px;
-  font-weight: 500;
-  line-height: 13px;
+.base-input-label {
   letter-spacing: 0;
   text-align: left;
-  color: #999999;
+  color: $text-light-color;
 }
