--- a/src/components/Input/InputFormProfile/Input.scss
+++ b/src/components/Input/InputFormProfile/Input.scss
@@ -1,20 +1,17 @@
+@import '../../../assets/variables';
+
 .profileLabelForm {
-  font-family: Inter, serif;
-  font-size: 13px;
-  font-weight: 500;
-  line-height: 13px;
-  letter-spacing: 0;
-  text-align: left;
   display: grid;
+  text-align: left;
   align-items: center;
   grid-template-columns: max-content 1fr;
   width: 100%;
-  color: #1e1e1e;
-  border-bottom: 1px solid #eaeaea;
+  color: $title-color;
+  border-bottom: 1px solid $divider-line-color;
 }
 
 .profileInputForm {
-  color: #999999;
+  color: $text-light-color;
 
   width: 100%;
   height: 32px;
@@ -23,12 +20,12 @@
   outline: none;
 
   &:disabled {
-    background: white;
+    background: $text-bgcolor;
     cursor: not-allowed;
   }
 
   &:focus {
-    color: #0f62fe;
+    color: $input-focus;
     border: none;
   }
 }
