--- a/src/components/TextBlock/Profile/Title/TitleNickName.scss
+++ b/src/components/TextBlock/Profile/Title/TitleNickName.scss
@@ -1,9 +1,6 @@
+@import "../../../../assets/variables";
+
 .nickname {
-  font-family: Inter, serif;
-  font-size: 16px;
-  font-weight: 600;
-  line-height: 16px;
-  letter-spacing: 0em;
+  font: $font-title;
   text-align: center;
-  color: #1e1e1e;
 }
