--- a/src/pages/authorization/authorization.scss
+++ b/src/pages/authorization/authorization.scss
@@ -1,8 +1,8 @@
-@import url(../global.scss);
+@import "../../assets/global";
 
 .authContainer {
   display: grid;
-  min-height: 100vh ;
+  min-height: 100vh;
 }
 
 .authWrapperBlock {
@@ -13,24 +13,19 @@
   width: 340px;
   min-height: 450px;
   height: max-content;
-  box-shadow: 0 0 6px 0 #00000024;
+  box-shadow: $menu-shadow;
   justify-self: center;
   align-self: center;
   border-radius: 12px;
 }
 
 .titleBlock {
+  font: $font-big;
   height: max-content;
-  font-family: Inter, serif;
-  font-size: 20px;
-  font-weight: 500;
-  line-height: 20px;
-  letter-spacing: 0;
   text-align: center;
 }
 
-
-.authForm{
+.authForm {
   display: grid;
   grid-row-gap: 16px;
   grid-template-rows: max-content max-content 1fr;
@@ -38,11 +33,11 @@
   height: 100%;
 }
 
-.authWrapperActions{
-  align-self: end;
+.authWrapperActions {
   display: grid;
-  width: 100%;
   grid-row-gap: 14px;
   grid-auto-rows: max-content;
+  align-self: end;
   justify-items: center;
+  width: 100%;
 }
