--- a/src/pages/chat/chat.scss
+++ b/src/pages/chat/chat.scss
@@ -1,5 +1,4 @@
-@import "//netdna.bootstrapcdn.com/font-awesome/3.0/css/font-awesome.css";
-@import url(../global.scss);
+@import "../../assets/global";
 
 .chatContainer {
   display: grid;
@@ -15,8 +14,8 @@
   height: 100vh;
   overflow: hidden;
   grid-template-rows: 102px 1fr;
-  background: #fbfbfb;
-  border-right: 1px solid #eaeaea;
+  background: $messenger-list-bgcolor;
+  border-right: 1px solid $divider-line-color;
 }
 
 .chatRightWrapper {
@@ -24,7 +23,7 @@
   height: 100vh;
   display: grid;
   grid-auto-rows: max-content;
-  background: white;
+  background: $text-bgcolor;
   padding: 0 20px;
 
   & > .chatMessageBlock {
@@ -34,18 +33,14 @@
     height: 100vh;
   }
 
-  & > .chatMessageBlock >  p {
-    font-family: Inter, serif;
-    font-size: 12px;
-    font-weight: 500;
-    line-height: 12px;
-    letter-spacing: 0em;
+  & > .chatMessageBlock > p {
+    font: $font-small;
     text-align: center;
-    color: #999999;
+    color: $text-light-color;
   }
 }
 
-%chatElementViewerBlock{
+%chatElementViewerBlock {
   display: grid;
   grid-column-gap: 10px;
   padding: 10px 0;
@@ -55,14 +50,13 @@
   @extend %chatElementViewerBlock;
   align-items: center;
   grid-template-columns: 1fr 25px;
-  border-bottom: 1px solid #eaeaea;
+  border-bottom: 1px solid $divider-line-color;
 }
 
-
-.chatRightMessageBlock{
+.chatRightMessageBlock {
   @extend %chatElementViewerBlock;
   grid-template-columns: 28px 1fr 28px;
-  border-top: 1px solid #eaeaea;
+  border-top: 1px solid $divider-line-color;
   align-items: center;
 }
 
@@ -79,7 +73,7 @@
   border-radius: 50%;
   height: 3px;
   width: 3px;
-  background: #1e1e1e;
+  background: $title-color;
 }
 
 .burgerIcon {
@@ -88,12 +82,13 @@
   align-items: center;
   height: 25px;
   width: 25px;
+
   &:hover {
     border-radius: 50%;
-    background: #f5f5f5;
+    background: $menu-button-bgcolor;
 
     .dotsWrapper > .dot {
-      background: #3369f3;
+      background: $link-color;
     }
   }
 }
@@ -110,19 +105,10 @@
   justify-items: end;
   padding-top: 21px;
   padding-bottom: 14px;
-  border-bottom: 1px solid #eaeaea;
+  border-bottom: 1px solid $divider-line-color;
 }
 
-%chatInput{
-  &::-webkit-input-placeholder {
-    font-family: Inter, serif;
-  }
-  box-sizing: border-box;
-  font-family: Inter, serif;
-  font-size: 13px;
-  font-weight: 500;
-  line-height: 13px;
-  letter-spacing: 0;
+%chatInput {
   text-align: center;
   border-radius: 5px;
   outline: 2px solid transparent;
@@ -130,17 +116,17 @@
   width: 100%;
   height: 32px;
   border: none;
-  background-color: #efefef;
+  background-color: $gray-light-color;
   padding: 0;
-  color: #1e1e1e;
-  transition:
-          background-color 70ms cubic-bezier(0.2, 0, 0.38, 0.9),
-          outline 70ms cubic-bezier(0.2, 0, 0.38, 0.9);
+  color: $messenger-message-color;
+  transition: background-color 70ms cubic-bezier(0.2, 0, 0.38, 0.9),
+  outline 70ms cubic-bezier(0.2, 0, 0.38, 0.9);
+
   :focus {
-    outline: 2px solid #0f62fe;
     outline-offset: -2px;
   }
 }
+
 .chatHeaderInput {
   @extend %chatInput;
 }
@@ -168,43 +154,33 @@
 }
 
 .chatBlockWrapper {
-  box-sizing: border-box;
   position: relative;
   display: grid;
   grid-template-columns: 47px 1fr max-content;
   grid-column-gap: 10px;
   height: 71px;
   padding: 10px;
+
   &:active, /* активная/посещенная ссылка */
   &:hover,
   &:visited,
-  &:link{
-    text-decoration: none;
-    color: #1a1a1a;
+  &:link {
+    color: $text-color;
   }
 
   &:hover {
-    background: #e4edfd;
+    background: $messenger-list-current-bgcolor;
   }
 }
 
 .chatElementTitle {
-  font-family: Inter, sans-serif;
-  font-size: 13px;
-  font-weight: 600;
-  line-height: 13px;
-  letter-spacing: 0em;
   text-align: left;
 }
 
 .chatElementDescription {
-  font-family: Inter, sans-serif;
-  font-size: 12px;
-  font-weight: 500;
-  line-height: 15px;
-  letter-spacing: 0em;
+  font: $font-small;
   text-align: left;
-  color: #999999;
+  color: $text-light-color;
 }
 
 %avatarBase {
@@ -212,12 +188,13 @@
   height: 47px;
   width: 47px;
   border-radius: 50%;
-  background: #efefef;
+  background: $gray-light-color;
 }
 
 .avatar {
   @extend %avatarBase;
 }
+
 .avatarSmall {
   @extend %avatarBase;
   height: 34px;
@@ -232,31 +209,23 @@
   justify-items: end;
   right: 10px;
   top: 0;
-  padding-top:10px;
+  padding-top: 10px;
 }
 
 .chatElementDateTime {
   width: fit-content;
-  font-family: Inter, sans-serif;
-  font-size: 9px;
-  font-weight: 500;
-  line-height: 13px;
-  letter-spacing: 0em;
+  font: $font-nano;
   text-align: right;
-  color: #999999;
+  color: $text-light-color;
   display: grid;
   grid-auto-flow: column;
   grid-column-gap: 4px;
 }
 
 .chatElementDateTimeViewer {
-  font-family: Inter, serif;
-  font-size: 12px;
-  font-weight: 500;
-  line-height: 12px;
-  letter-spacing: 0em;
+  font: $font-small;
   text-align: center;
-  color: #999999;
+  color: $text-light-color;
   margin-bottom: 30px;
   margin-top: 48px;
 }
@@ -267,7 +236,7 @@
   max-height: 211px;
   max-width: 316px;
   border-radius: 12px;
-  border: 1px solid #eaeaea;
+  border: 1px solid $divider-line-color;
   overflow: hidden;
   justify-content: center;
   align-items: center;
@@ -276,7 +245,7 @@
     max-height: 300px;
   }
 
-  & > .chatElementDateTime{
+  & > .chatElementDateTime {
     width: fit-content;
     height: fit-content;
     position: absolute;
@@ -285,8 +254,7 @@
     bottom: 11px;
     padding: 2px 7px;
     color: white;
-    background: #52525280;
-
+    background: $messenger-message-inverse-bgcolor;
   }
 }
 
@@ -294,54 +262,34 @@
   display: grid;
   justify-items: center;
   align-items: center;
-  font-family: Inter, sans-serif;
-  font-size: 11px;
-  font-weight: 500;
-  line-height: 12px;
-  letter-spacing: 0em;
+  font: $font-micro;
   text-align: center;
   border-radius: 50%;
   height: 20px;
   width: 20px;
-  background: #3369f3;
+  background: $link-color;
   color: white;
 }
 
 .chatProfileLink {
-  font-family: Inter, serif;
-  font-size: 12px;
-  font-weight: 500;
-  line-height: 12px;
-  letter-spacing: 0;
+  font: $font-small;
   text-align: right;
-  color: #999999;
-
-  &:active, /* активная/посещенная ссылка */
-  &:hover,
-  &:visited,
-  &:link{
-    text-decoration: none;
-  }
+  color: $text-light-color;
 }
 
 .divider {
   display: grid;
   height: 1px;
-  background: #eaeaea;
+  background: $divider-line-color;
   margin: 0 10px;
 }
 
 .chatRightTitle {
-  font-family: Inter, serif;
-  font-size: 13px;
-  font-weight: 600;
-  line-height: 13px;
-  letter-spacing: 0em;
   text-align: left;
-  color: #1e1e1e;
+  color: $messenger-message-color;
 }
 
-.chatViewerWrapper{
+.chatViewerWrapper {
   display: grid;
   align-items: end;
   height: calc(100vh - 110px);
@@ -359,63 +307,58 @@
 
 %chatElementMessage {
   word-break: break-word;
-  font-family: Inter, sans-serif;
+  font: $font-micro;
   padding: 11px;
   max-width: 402px;
-  font-size: 12px;
-  font-weight: 500;
-  line-height: 15px;
-  letter-spacing: 0em;
   text-align: left;
   border-radius: 0 12px 12px 12px;
-  background: #f8f8f8;
+  background: $messenger-message-bgcolor;
   justify-self: left;
 }
 
-
-
 .chatElementMessageArrived {
   @extend %chatElementMessage;
+  font: $font-small;
   position: relative;
 
-  & > .chatElementDateTime{
+  & > .chatElementDateTime {
     width: fit-content;
     height: fit-content;
     position: absolute;
     z-index: 2;
     right: 11px;
     bottom: 11px;
-
   }
 }
 
 .chatElementMessageSent {
   @extend %chatElementMessage;
+  font: $font-small;
   display: grid;
   grid-template-columns: max-content max-content max-content;
   align-items: end;
   grid-column-gap: 15px;
   justify-self: end;
   border-radius: 12px 12px 0 12px;
-  background: #e4edfd;
-  & > .chatElementDateTime{
-    color: #3369F3;
+  background: $messenger-message-my-bgcolor;
+
+  & > .chatElementDateTime {
+    color: $link-color;
   }
 }
 
-.iconPaperClipContainer{
+.iconPaperClipContainer {
   display: flex;
   justify-items: center;
   align-items: center;
-  color:#3369F3;
-;
+  color: $link-color;
 }
 
-.iconPaperArrowContainer{
+.iconPaperArrowContainer {
   width: 28px;
   height: 28px;
-  background: #3369F3;
-  color: white;
+  background: $button-bgcolor;
+  color: $button-color;
   border-radius: 50%;
   display: flex;
   justify-content: center;
