--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -1,5 +1,5 @@
 @import "//netdna.bootstrapcdn.com/font-awesome/3.0/css/font-awesome.css";
-@import url(../global.scss);
+@import "../../assets/global.scss";
 
 .profileContainer {
   display: grid;
@@ -16,15 +16,8 @@
   width: 28px;
   height: 28px;
   border-radius: 50%;
-  background: #3369f3;
-  color: white;
-
-  &:active, /* активная/посещенная ссылка */
-  &:hover,
-  &:visited,
-  &:link {
-    text-decoration: none;
-  }
+  background: $button-bgcolor;
+  color: $button-color;
 }
 
 .avatarProfile {
@@ -34,8 +27,8 @@
   height: 130px;
   width: 130px;
   border-radius: 50%;
-  background: #efefef;
-  color: #cdcdcd;
+  background: $gray-light-color;
+  color: $avatar-profile;
   cursor: pointer;
   user-select: none;
 
@@ -46,6 +39,7 @@
   &:hover {
     .changeAvatar {
       display: flex;
+      color: $button-color;
     }
   }
 }
@@ -55,8 +49,8 @@
   height: 100%;
   justify-content: center;
   align-items: center;
-  background: #fbfbfb;
-  border-right: 1px solid #eaeaea;
+  background: $messenger-list-bgcolor;
+  border-right: 1px solid $divider-line-color;
 }
 
 .profileDescriptionWrapper {
@@ -78,11 +72,11 @@
 .profileInputsContainer {
   display: grid;
   width: 510px;
+
   .profileLabelForm:nth-last-child(2) {
     border: none;
   }
 }
-
 
 
 .actionsElementsWrapper {
@@ -92,19 +86,14 @@
 
 .changeAvatar {
   display: none;
-  font-family: Inter, serif;
-  font-size: 13px;
-  font-weight: 500;
-  line-height: 14px;
-  letter-spacing: 0;
-  text-align: center;
   z-index: 100;
+  text-align: center;
   position: absolute;
   width: 130px;
   height: 130px;
   border-radius: 50%;
   justify-content: center;
   align-items: center;
-  background: #000000;
+  background: $avatar-change-background;
   opacity: 50%;
 }
